--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -82,6 +82,13 @@ ru:
       destroy:
         success: "Ответ удален"
 
+    gists:
+      index:
+        gist_list_header: "Список gist"
+        question: "Вопрос"
+        url: "Ссылка"
+        email: "Email автора"
+
   general:
     errors: "Ошибки"
     back: "Назад"
@@ -93,6 +100,7 @@ ru:
     unauthorized: "Нет прав для просмотра этой страницы"
     welcome_flash: "Привет, %{first_name}!"
     management: "Управление"
+    gist_list: "Список gist"w
 
   test_passings:
     result:
@@ -100,9 +108,13 @@ ru:
       test_passed: "Тест пройден успешно!"
       test_failed: "Тест не пройден!"
       score: "Результат"
+    gist:
+      success: "Gist успешно сохранен"
+      failure: "Во время сохранения gist произошла ошибка"
     show:
       in_progress_header: "Выполнение теста %{title}"
       next: "Далее"
+      gist_question: "Сохранить как gist"
     update:
       test_completed: "Тест окончен!"
 
@@ -119,3 +131,7 @@ ru:
   tests_mailer:
     completed_test:
       subject: "Вы успешно завершили тест на TestGuru!"
+
+  services:
+    gist:
+      description: "Вопрос %{title} от TestGuru"
