--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -1,37 +1,37 @@
 ru:
   activerecord:
     models:
-      test: "í•·‚"
-      question: "ÇÆØ‡Æ·"
-      answer: "é‚¢•‚"
-      category: "ä†‚•£Æ‡®Ô"
-      user: "èÆ´ÏßÆ¢†‚•´Ï"
-      admin: "Ä§¨®≠®·‚‡†‚Æ‡"
+      test: "–¢–µ—Å—Ç"
+      question: "–í–æ–ø—Ä–æ—Å"
+      answer: "–û—Ç–≤–µ—Ç"
+      category: "–ö–∞—Ç–µ–≥–æ—Ä–∏—è"
+      user: "–ü–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—å"
+      admin: "–ê–¥–º–∏–Ω–∏—Å—Ç—Ä–∞—Ç–æ—Ä"
 
     attributes:
       test:
-        title: "ç†ß¢†≠®•"
-        level: "ì‡Æ¢•≠Ï"
-        category: "ä†‚•£Æ‡®Ô"
-        author: "Ä¢‚Æ‡"
+        title: "–ù–∞–∑–≤–∞–Ω–∏–µ"
+        level: "–£—Ä–æ–≤–µ–Ω—å"
+        category: "–ö–∞—Ç–µ–≥–æ—Ä–∏—è"
+        author: "–ê–≤—Ç–æ—Ä"
       question:
-        body: "í•™·‚ ¢ÆØ‡Æ·†"
-        test: "í•·‚"
+        body: "–¢–µ–∫—Å—Ç –≤–æ–ø—Ä–æ—Å–∞"
+        test: "–¢–µ—Å—Ç"
       answer:
-        body: "í•™·‚ Æ‚¢•‚†"
-        correct: "Ç•‡≠Î© Æ‚¢•‚"
-        question: "ÇÆØ‡Æ·"
+        body: "–¢–µ–∫—Å—Ç –æ—Ç–≤–µ—Ç–∞"
+        correct: "–í–µ—Ä–Ω—ã–π –æ—Ç–≤–µ—Ç"
+        question: "–í–æ–ø—Ä–æ—Å"
       user:
         email: "Email"
-        first_name: "à¨Ô"
-        last_name: "î†¨®´®Ô"
-        password: "è†‡Æ´Ï"
+        first_name: "–ò–º—è"
+        last_name: "–§–∞–º–∏–ª–∏—è"
+        password: "–ü–∞—Ä–æ–ª—å"
 
     errors:
       messages:
-        blank: "ç• ¨Æ¶•‚ °Î‚Ï Ø„·‚Î¨"
-        taken: "ì¶• ·„È•·‚¢„•‚"
-        invalid: "à¨••‚ ≠•¢•‡≠Æ• ß≠†Á•≠®•"
-        numericality: "ÑÆ´¶•≠ °Î‚Ï Ê•´Î¨ Á®·´Æ¨"
-        greater_than_or_equal_to: "åÆ¶•‚ ®¨•‚Ï ß≠†Á•≠®• °Æ´ÏË•• ®´® ‡†¢≠Æ• %{count}"
-        too_many_answers: "ÇÆØ‡Æ· ≠• ¨Æ¶•‚ ·Æ§•‡¶†‚Ï °Æ´ÏË• 4Â Æ‚¢•‚Æ¢"
+        blank: "–ù–µ –º–æ–∂–µ—Ç –±—ã—Ç—å –ø—É—Å—Ç—ã–º"
+        taken: "–£–∂–µ —Å—É—â–µ—Å—Ç–≤—É–µ—Ç"
+        invalid: "–ò–º–µ–µ—Ç –Ω–µ–≤–µ—Ä–Ω–æ–µ –∑–Ω–∞—á–µ–Ω–∏–µ"
+        numericality: "–î–æ–ª–∂–µ–Ω –±—ã—Ç—å —Ü–µ–ª—ã–º —á–∏—Å–ª–æ–º"
+        greater_than_or_equal_to: "–ú–æ–∂–µ—Ç –∏–º–µ—Ç—å –∑–Ω–∞—á–µ–Ω–∏–µ –±–æ–ª—å—à–µ–µ –∏–ª–∏ —Ä–∞–≤–Ω–æ–µ %{count}"
+        too_many_answers: "–í–æ–ø—Ä–æ—Å –Ω–µ –º–æ–∂–µ—Ç —Å–æ–¥–µ—Ä–∂–∞—Ç—å –±–æ–ª—å—à–µ 4—Ö –æ—Ç–≤–µ—Ç–æ–≤"
