--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -7,6 +7,8 @@ ru:
       confirmed: "Ваша учётная запись успешно подтверждена."
       send_instructions: "В течение нескольких минут вы получите письмо с инструкциями по подтверждению вашей учётной записи."
       send_paranoid_instructions: "Если ваш адрес email есть в нашей базе данных, то в течение нескольких минут вы получите письмо с инструкциями по подтверждению вашей учётной записи."
+      header: "Повторно отправьте инструкции по подтверждению."
+      submit: "Повторите инструкции по отправке."
     failure:
       already_authenticated: "Вы уже вошли в систему."
       inactive: "Ваша учётная запись ещё не активирована."
@@ -19,14 +21,26 @@ ru:
       unconfirmed: "Вы должны подтвердить вашу учётную запись."
     mailer:
       confirmation_instructions:
+        confirm: "Подтвердите мою учетную запись."
+        body: "Вы можете подтвердить адрес электронной почты своей учетной записи по ссылке ниже:"
         subject: "Инструкции по подтверждению учётной записи."
       reset_password_instructions:
+        body: "Кто-то запросил ссылку для смены вашего пароля. Вы можете сделать это по ссылке ниже."
+        change: "Измените мой пароль"
+        warning: "Если вы не запрашивали это, пожалуйста, проигнорируйте это электронное письмо.
+                  Ваш пароль не изменится до тех пор, пока вы не перейдете по ссылке выше и не создадите новый."
         subject: "Инструкции по восстановлению пароля."
       unlock_instructions:
+        body: "Ваша учетная запись была заблокирована из-за чрезмерного количества неудачных попыток входа в систему."
+        url: "Нажмите на ссылку ниже, чтобы разблокировать свою учетную запись:"
+        unlock: "Разблокируйте мой аккаунт"
         subject: "Инструкции по разблокировке учётной записи."
       email_changed:
+        body: "Мы связываемся с вами, чтобы уведомить вас о том, что ваш адрес электронной почты был изменен на"
+        body_else: "Мы связываемся с вами, чтобы уведомить вас о том, что ваш адрес электронной почты изменен на"
         subject: "Еmail адрес был изменён."
       password_change:
+        body: "Мы связываемся с вами, чтобы уведомить вас о том, что ваш пароль был изменен."
         subject: "Пароль был изменён."
     omniauth_callbacks:
       failure: "Вы не можете войти в систему с учётной записью из %{kind}, так как \"%{reason}\"."
