--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -4,6 +4,8 @@ en:
       confirmed: "Your email address has been successfully confirmed."
       send_instructions: "You will receive an email with instructions for how to confirm your email address in a few minutes."
       send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
+      header: "Resend confirmation instructions."
+      submit: "Repeat send instructions."
     failure:
       already_authenticated: "You are already signed in."
       inactive: "Your account is not activated yet."
@@ -16,14 +18,26 @@ en:
       unconfirmed: "You have to confirm your email address before continuing."
     mailer:
       confirmation_instructions:
+        confirm: "Confirm my account."
+        body: "You can confirm your account email through the link below:"
         subject: "Confirmation instructions"
       reset_password_instructions:
+        body: "Someone has requested a link to change your password. You can do this through the link below."
+        change: "Change my password"
+        warning: "If you didn't request this, please ignore this email.
+                  Your password won't change until you access the link above and create a new one."
         subject: "Reset password instructions"
       unlock_instructions:
+        body: "Your account has been locked due to an excessive number of unsuccessful sign in attempts."
+        url: "Click the link below to unlock your account:"
+        unlock: "Unlock my account"
         subject: "Unlock instructions"
       email_changed:
+        body: "We're contacting you to notify you that your email has been changed to"
+        body_else: "We're contacting you to notify you that your email is being changed to"
         subject: "Email Changed"
       password_change:
+        body: "We're contacting you to notify you that your password has been changed."
         subject: "Password Changed"
     omniauth_callbacks:
       failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
