--- a/config/locales/activerecord.ru.yml
+++ b/config/locales/activerecord.ru.yml
@@ -7,6 +7,7 @@ ru:
       category: "Категория"
       user: "Пользователь"
       admin: "Администратор"
+      badge: "Бейдж"
 
     attributes:
       test:
@@ -28,6 +29,11 @@ ru:
         password: "Пароль"
         password_confirmation: "Пароль ещё раз"
         characters_minimum: "(6 символов минимум)"
+      badge:
+        name: "Название"
+        description: "Описание"
+        badge_image: "Иконка"
+        rule: "Правило"
 
     errors:
       messages:
