--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -10,12 +10,20 @@ ru:
       answer:
         create: "Создать"
         update: "Сохранить"
+      badge:
+        create: "Создать"
+        update: "Сохранить"
 
     label:
       test:
         title: "Название"
         level: "Уровень"
         category_id: "Категория"
+      badge:
+        name: "Название"
+        description: "Описание"
+        rule_options: "Опции к правилу"
+        rule_id: "Правило"
 
     select:
       prompt: "Выберите:"
@@ -95,6 +103,33 @@ ru:
         url: "Ссылка"
         email: "Автор"
 
+    badges:
+      destroy:
+        success: "Бейдж удален"
+      update:
+        success: "Бейдж сохранен"
+      create:
+        success: "Бейдж добавлен"
+      form:
+        image: "Выберите картинку"
+        name: "Название"
+        description: "Описание"
+        rule_options: "Опции к правилу"
+        rule_id: "Правило"
+      new:
+        create_badge_header: "Создать Бейдж"
+      edit:
+        edit_badge_header: "Редактировать Бейдж"
+      index:
+        name: "Название"
+        description: "Описание"
+        rule: "Правило"
+        actions: "Действия"
+        no_badges_placeholder: "Нет сохраненных бейджей"
+        new_badge_link: "Создать бейдж"
+      show:
+        reward_for: "Награда за %{description}"
+
   general:
     errors: "Ошибки"
     back: "Назад"
@@ -105,9 +140,11 @@ ru:
     welcome: "Добро пожаловать, %{first_name} гуру!"
     unauthorized: "Нет прав для просмотра этой страницы"
     welcome_flash: "Привет, %{first_name}!"
-    management: "Управление"
+    management: "Управление тестами"
     gist_list: "Список gist"
     feedback: "Обратная связь"
+    badge_management: "Управление бейджами"
+    badges: "Бейджи"
 
   test_passings:
     result:
@@ -121,8 +158,10 @@ ru:
       questions_progress: "Вопрос %{current} из %{total}"
       next: "Далее"
       gist_question: "Сохранить как gist"
+      already_completed: "Данная попытка уже завершена, но Вы можете начать новый тест"
     update:
       test_completed: "Тест окончен!"
+    new_badge_received: "Поздравляем! Вы получаете бейдж!"
 
   tests:
     test:
